[tool.poetry]
name = "ftool"
version = "0.1.0"
description = ""
authors = ["汪凌峰 <540914848@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.4"
pydantic-settings = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
